# samples-cpp-sdk

./: ActivationActions.hpp  DisplayHelper.hpp  README.Linux  README.Linux.md  README.MacOS  README.MacOS.md  README.Windows  README.Windows.md  README.md
Activation.Console/: ActivationActions.hpp  ActivationConfig.hpp  CMakeLists.txt  ConfirmOptions.hpp  DisplayHelper.hpp  Helpers.hpp  LicenseStorage.hpp  PromptHelper.hpp  main.cpp  vcpkg.json
Activation.Console/Config/: appsettings.json  appsettings.json.in
Activation.Console/cmake/: PlatformConfig.cmake
